force-app/main/default/objects/RMS_Product__c/fields/Product_Number_CN__c.field-meta.xml
<CustomField>
    <fullName>Product_Number_CN__c</fullName>
    <description>product_number_all_cn_rl</description>
    <label>Product Number CN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>