force-app/main/default/objects/RMS_Product__c/fields/Rpc_Global__c.field-meta.xml
<CustomField>
    <fullName>Rpc_Global__c</fullName>
    <description>rpc_global_all_cn_rl</description>
    <label>Rpc Global</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>APAC GLOBAL</fullName>
            </value>
            <value>
                <fullName>ASIA REQUESTED</fullName>
            </value>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
            <value>
                <fullName>INLINE</fullName>
            </value>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>REGIONAL</fullName>
            </value>
            <value>
                <fullName>Regional Product Create</fullName>
            </value>
            <value>
                <fullName>RPC</fullName>
            </value>
            <value>
                <fullName>SMU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>