force-app/main/default/objects/RMS_Product__c/fields/Sap_In_Store_Date__c.field-meta.xml
<CustomField>
    <fullName>Sap_In_Store_Date__c</fullName>
    <description>sap_in_store_date_all_all_gl</description>
    <label>Sap In Store Date</label>
    <type>Date</type>
</CustomField>