force-app/main/default/objects/RMS_Product__c/fields/Season_Code__c.field-meta.xml
<CustomField>
    <fullName>Season_Code__c</fullName>
    <description>season_all_all_gl</description>
    <label>Season Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>