force-app/main/default/objects/RMS_Product__c/fields/Season_Code_CN__c.field-meta.xml
<CustomField>
    <fullName>Season_Code_CN__c</fullName>
    <label>Season Code CN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>