force-app/main/default/objects/RMS_Product__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>segment_all_all_gl</description>
    <label>Segment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>