force-app/main/default/objects/RMS_Product__c/fields/Silhouette__c.field-meta.xml
<CustomField>
    <fullName>Silhouette__c</fullName>
    <description>silhouette_all_all_rl</description>
    <label>Silhouette</label>
    <length>40</length>
    <type>Text</type>
</CustomField>