force-app/main/default/objects/RMS_Product__c/fields/Silhouette_Group__c.field-meta.xml
<CustomField>
    <fullName>Silhouette_Group__c</fullName>
    <description>silhouette_group_all_cn_rl</description>
    <label>Silhouette Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>