force-app/main/default/objects/RMS_Product__c/fields/Silhouette_Type__c.field-meta.xml
<CustomField>
    <fullName>Silhouette_Type__c</fullName>
    <description>silhouette_type_ft_all_gl</description>
    <label>Silhouette Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boots</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Sandals</fullName>
            </value>
            <value>
                <fullName>Sneakers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>