force-app/main/default/objects/RMS_Product__c/fields/Size_Range__c.field-meta.xml
<CustomField>
    <fullName>Size_Range__c</fullName>
    <description>size_range_all_all_gl</description>
    <label>Size Range</label>
    <length>40</length>
    <type>Text</type>
</CustomField>