force-app/main/default/objects/RMS_Product__c/fields/Size_Range_Apac__c.field-meta.xml
<CustomField>
    <fullName>Size_Range_Apac__c</fullName>
    <description>size_range_apac_all_rl</description>
    <label>Size Range Apac</label>
    <length>40</length>
    <type>Text</type>
</CustomField>