force-app/main/default/objects/RMS_Product__c/fields/Size_Range_CN__c.field-meta.xml
<CustomField>
    <fullName>Size_Range_CN__c</fullName>
    <description>size_range_all_cn_rl</description>
    <label>Size Range CN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>