force-app/main/default/objects/RMS_Product__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>product_sku_code_all_cn_rl</description>
    <label>SKU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>