force-app/main/default/objects/RMS_Product__c/fields/Solid_Material__c.field-meta.xml
<CustomField>
    <fullName>Solid_Material__c</fullName>
    <description>solid_material_all_all_gl</description>
    <label>Solid Material</label>
    <length>40</length>
    <type>Text</type>
</CustomField>