force-app/main/default/objects/RMS_Product__c/fields/Story__c.field-meta.xml
<CustomField>
    <fullName>Story__c</fullName>
    <description>story_all_all_rl</description>
    <label>Story</label>
    <length>80</length>
    <type>Text</type>
</CustomField>