force-app/main/default/objects/RMS_Product__c/fields/Style_Number__c.field-meta.xml
<CustomField>
    <fullName>Style_Number__c</fullName>
    <description>style_number_all_all_gl</description>
    <label>Style Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>