force-app/main/default/objects/RMS_Product__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>sub_category_all_all_gl</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backpacks</fullName>
            </value>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Crews</fullName>
            </value>
            <value>
                <fullName>Cross Body</fullName>
            </value>
            <value>
                <fullName>Dresses</fullName>
            </value>
            <value>
                <fullName>Duffel/Barrel Bags</fullName>
            </value>
            <value>
                <fullName>Footies</fullName>
            </value>
            <value>
                <fullName>Jackets</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
            <value>
                <fullName>Pants</fullName>
            </value>
            <value>
                <fullName>Small Cases</fullName>
            </value>
            <value>
                <fullName>Sweat Shirts</fullName>
            </value>
            <value>
                <fullName>Tees</fullName>
            </value>
            <value>
                <fullName>Totes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>