force-app/main/default/objects/RMS_Product__c/fields/Sub_Category_Rl__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category_Rl__c</fullName>
    <description>sub_category_all_all_rl</description>
    <label>Sub Category Rl</label>
    <length>40</length>
    <type>Text</type>
</CustomField>