force-app/main/default/objects/RMS_Product__c/fields/Target_Retail_Usd__c.field-meta.xml
<CustomField>
    <fullName>Target_Retail_Usd__c</fullName>
    <description>target_retail_usd_all_all_gl</description>
    <label>Target Retail Usd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>