force-app/main/default/objects/RMS_Product__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>tier_all_all_gl</description>
    <label>Tier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>