force-app/main/default/objects/RMS_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Season_Code__c</columns>
    <columns>BUCN__c</columns>
    <columns>CFS_Rebuy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>